--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon app.js"
- },
+  },
   "author": "Jaime",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "https": "^1.0.0",
     "nodemon": "^1.14.7"
   }
 }
