--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "daemon": "^1.1.0",
     "express": "^4.16.2",
     "https": "^1.0.0",
-    "nodemon": "^1.14.7"
+    "nodemon": "^1.14.7",
+    "pm2": "^2.9.1"
   }
 }
